@@ -1,3 +1,6 @@
+2007-12-29
+"MyWord" added the BookList class
+
 2007-12-27
 "MyWord" added the DictFile class
 
